--- a/templates/inputform.html
+++ b/templates/inputform.html
@@ -20,5 +20,36 @@
 <br>
 Current model version: 5k9k
 <br>
+<br>
+<br>
+<br>
+<br>
+<div style="text-align:center">
+<p></p>
+<br>
+<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=12&l=ur1&category=electronics&banner=1RJ5QAT5B55ECPXSXB82&f=ifr&linkID=90c3cb8d14ab24e8ec2dea14470e68f4&t=easterpat52-20&tracking_id=easterpat52-20" width="300" height="250" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+
+<br>
+<br>
+
+
+
+<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=308&l=ur1&category=audiblegiftmemberships&banner=0N7MX06GEHZ8430X4N82&f=ifr&lc=pf4&linkID=4f89ec6582d3a7b22437e6314215e4cf&t=easterpat52-20&tracking_id=easterpat52-20" width="250" height="300" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+
+<br>
+<br>
+<a target="_blank" href="https://www.amazon.com/wedding/home?ref_=assoc_tag_ph_1524238801480&_encoding=UTF8&camp=1789&creative=9325&linkCode=pf4&tag=easterpat52-20&linkId=6a02a805edf5fcdfbd30e12cd8c574b5">Create an Amazon Wedding Registry</a>
+<br>
+<br>
+<a target="_blank" href="https://www.amazon.com/gp/baby/homepage?ref_=assoc_tag_ph_1402131859555&_encoding=UTF8&camp=1789&creative=9325&linkCode=pf4&tag=easterpat52-20&linkId=49435981245d4f0bd542a9bf68d7c747">Shop Amazon - Create an Amazon Baby Registry</a>
+<br>
+<br>
+<br>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
 </body>
